[package]
name = "adxl345-async"
version = "0.1.2"
edition = "2024"
authors = ["Gustavo Weber Denardin <gustavo@utfpr.edu.br>"]
description = "Um driver async para o acelerômetro ADXL345 usando embedded-hal-async"
license = "MIT OR Apache-2.0"

[dependencies]
# Traits modernas de hardware do ecossistema Rust
embedded-hal-async = "1.0"