[package]
name = "adxl345-async"
version = "0.2.0"
edition = "2024"
authors = ["Gustavo Weber Denardin <gustavo@utfpr.edu.br>"]
description = "An async driver for the ADXL345 accelerometer using embedded-hal-async."
license = "MIT OR Apache-2.0"

[dependencies]
# Traits modernas de hardware do ecossistema Rust
embedded-hal-async = "1.0"